--- a/static/styles.css
+++ b/static/styles.css
@@ -1,13 +1,26 @@
-h1{
-  color: red;
+body {
+    font-family: 'Times New Roman', Times, serif;
+    margin: auto;
+    padding: 0%;
+    background:rgb(236, 119, 10);
 }
 
-
-img{
-  width: 100px;
-  height: 50px
+.header{
+    background-color: rgb(7, 224, 105);
+    font-family: "Megrim", cursive;
+    font-size: small;
+    color: rgb(14, 110, 219);
+    padding: 22px;
+    text-align: center;
+    margin: 20px;
 }
 
-body{
-  background: #1b9dde;
+footer{
+    text-align: center;
+    color: rgb(162, 45, 230);
+    background-color: rgb(231, 169, 36);
+    padding: 30px;
+    margin: 25px;
+    font-size:medium;
+    font-family: "Miniver", cursive;
 }
