--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,10 @@
   <!-- Use your own colors create cards for the random facts and students,  -->
   <!-- Pro Tip: You can use multiple pages -->
   <!-- Pro Tip: Impliment a  refresh/reload button in every page  -->
-  <h1>Random Fact</h1>
+  <fieldset>
+    <legend>Random Facts.</legend>
   {{fact}}
+  </fieldset>
 
   <h1>Random Student</h1>
   {{name}}
@@ -25,5 +27,8 @@
 
   <img src="{{dog}}" alt="">
   <!-- {{dog}} -->
+  <footer>
+    <p>Wesley Kamotho Hackathon ASSGN.</p>
+  </footer>
 </body>
 </html>
